--- a/learning_stage2/learning_stage2.vcxproj.filters
+++ b/learning_stage2/learning_stage2.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="guessing_game.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="for_loops.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
