--- a/learning_stage2/learning_stage2.vcxproj.filters
+++ b/learning_stage2/learning_stage2.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClCompile Include="for_loops.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="exponent_function.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
