--- a/learning_stage2/learning_stage2.vcxproj
+++ b/learning_stage2/learning_stage2.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="for_loops.cpp" />
     <ClCompile Include="guessing_game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pointers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
