--- a/learning_stage2/learning_stage2.vcxproj.filters
+++ b/learning_stage2/learning_stage2.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="2d_arrays_and_nested_loops.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="pointers.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
