--- a/learning_stage2/learning_stage2.vcxproj
+++ b/learning_stage2/learning_stage2.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="2d_arrays_and_nested_loops.cpp" />
+    <ClCompile Include="classes_and_objects.cpp" />
     <ClCompile Include="exponent_function.cpp" />
     <ClCompile Include="for_loops.cpp" />
     <ClCompile Include="guessing_game.cpp" />
