--- a/learning_stage2/learning_stage2.vcxproj
+++ b/learning_stage2/learning_stage2.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="for_loops.cpp" />
     <ClCompile Include="guessing_game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="object_functions.cpp" />
     <ClCompile Include="pointers.cpp" />
   </ItemGroup>
   <ItemGroup>
