--- a/learning_stage2/learning_stage2.vcxproj.filters
+++ b/learning_stage2/learning_stage2.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="classes_and_objects.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="object_functions.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
