--- a/learning_stage2/learning_stage2.vcxproj
+++ b/learning_stage2/learning_stage2.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="classes_and_objects.cpp" />
     <ClCompile Include="exponent_function.cpp" />
     <ClCompile Include="for_loops.cpp" />
+    <ClCompile Include="getters_and_setters.cpp" />
     <ClCompile Include="guessing_game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="object_functions.cpp" />
