--- a/learning_stage2/learning_stage2.vcxproj.filters
+++ b/learning_stage2/learning_stage2.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="object_functions.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="getters_and_setters.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
